--- a/styling.css
+++ b/styling.css
@@ -1,4 +1,3 @@
-/* common styles */
 * {
     padding: 0;
     margin: 0;
@@ -9,16 +8,8 @@
     display: flex;
     background-color: rgb(125, 143, 158);
     font-family: sans-serif;
+    justify-content: center;
   }
-  button:hover {
-    cursor: pointer;
-    background-color: #5967b1;
-  }
-  ul {
-    list-style-type: none; /* get rid of bullet points on side of list items */
-  }
-  /* common style ends */
-  /* container */
   .container {
     min-width: 700px;
     display: flex;
@@ -26,13 +17,19 @@
     align-items: center;
     padding: 40px;
   }
-  h1 {
-    color: #fff;
-    font-size: 3rem;
+  
+  ul {
+    list-style-type: none; 
   }
-  /* todo-form */
+  h2 {
+    color: #fff;
+    font-size: 2rem;
+  }
+
   .todo-form {
     margin: 60px 0px;
+    border-radius: 100px;
+    border-bottom-color: aqua;
   }
   .todo-input {
     width: 250px;
@@ -52,12 +49,24 @@
     padding: 7px;
     font-size: 1.2rem;
   }
-  /* todo-form style ends */
-  /* todo-items */
+  .delete-button {
+    float: right;
+    background-color: red;
+    border: none;
+    outline: none;
+    border-radius: 7px;
+    padding: 3px 5px;
+    margin-left: 20px;
+    font-size: 1.1rem;
+    font-weight: 220;
+  }
+  button:hover {
+    cursor: pointer;
+    background-color: #5967b1;
+  }
   .todo-items {
     min-width: 350px;
   }
-  /* each li with class="item" */
   .item {
     background-color: #fff;
     padding: 10px;
@@ -71,24 +80,10 @@
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
   }
-  /* item style end */
   .checkbox {
     margin-right: 10px;
   }
-  .delete-button {
-    float: right;
-    background-color: red;
-    border: none;
-    outline: none;
-    border-radius: 7px;
-    padding: 3px 5px;
-    margin-left: 20px;
-    font-size: 1.1rem;
-    font-weight: 220;
-  }
-  /* applied when the todo item is checked */
+  
   .checked { 
     text-decoration:line-through;
   }
-  /* todo-items style ends */
-  /* container style ends */
